button styles updated

--- a/src/app/styles/_buttons.scss
+++ b/src/app/styles/_buttons.scss
@@ -1,6 +1,6 @@
-.primart-btn,
+.primary-btn,
 .secondary-btn,
-.nav-btn {
+.navbar-btn {
   display: flex;
   align-items: center;
   justify-content: center;
