--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,5 +1,5 @@
 <div>
-  <button class="primary-btn"> contact</button>
-  <button class="navbar-btn">submit</button>
-  <button class="secondary-btn">submit</button>
+  <button class="primary-btn"> primary</button>
+  <button class="navbar-btn">navbar</button>
+  <button class="secondary-btn">secondary</button>
 </div>
