feat: update church that's relevant

--- a/src/app/church-relevant/church-relevant.component.html
+++ b/src/app/church-relevant/church-relevant.component.html
@@ -1,1 +1,59 @@
-<p>church-relevant works!</p>
+<section id="church-thats-relevant">
+    <div class="max-w-6xl px-5 mx-auto mt-32 text-left">
+      <!-- SUB-HEADLINE -->
+      <h6 class="text-lg font-normal text-center">
+        SUB-HEADLINE</h6>
+       <!--Heading-->
+       <h2 class="text-4xl font-bold text-center">
+        CHURCH THAT'S RELEVANT
+       </h2>
+       <!--Church Relevant Container-->
+       <div class="flex flex-col mt-24 md:flex-row md:space-x-6">
+        <!--ABOUT US-->
+        <div>
+        <div class="flex flex-col items-start p-6 square-lg bg-lightGreen">
+           <img src="./assets/images/icon-church-relevant1.svg" class="w-16 -mt-14 pt-12 pb-8" alt="">
+           <h3 class="text-lg font-bold">ABOUT US</h3>
+           <p class="text-sm text-darkGrayishBlue">
+            Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do
+            eiusmod tempor incididunt ut labore et dolore magna aliqua.
+           </p>
+        </div>
+           <div>
+            <img src="./assets/images/icon-botton-line.svg" alt="">
+           </div>
+       </div>
+       <!--GET INVOLVED-->
+       <div>
+       <div class="flex flex-col items-start p-6 square-lg bg-lightGreen">
+          <img src="./assets/images/icon-church-relevant2.svg" class="w-16 -mt-14 pt-12 pb-8" alt="">
+          <h3 class="text-lg font-bold">GET INVOLVED</h3>
+          <p class="text-sm text-darkGrayishBlue">
+            Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do
+            eiusmod tempor incididunt ut labore et dolore magna aliqua.
+          </p>
+        </div>
+          <div>
+            <img src="./assets/images/icon-botton-line.svg" alt="">
+           </div>
+      </div>
+      <!--GIVING BACK-->
+      <div>
+      <div class="flex flex-col items-start p-6 square-lg bg-lightGreen">
+         <img src="./assets/images/icon-church-relevant3.svg" class="w-16 -mt-14 pt-12 pb-8" alt="">
+         <h3 class="text-lg font-bold">GIVING BACK</h3>
+         <p class="text-sm text-darkGrayishBlue">
+          Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do
+          eiusmod tempor incididunt ut labore et dolore magna aliqua.
+         </p>
+        </div>
+         <div>
+          <img src="./assets/images/icon-botton-line.svg" alt="">
+         </div>
+       </div>
+      </div>
+    </div>
+   </section>
+
+
+
