--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,4 +1,4 @@
-
+//this is to test if the buttons work.
 <div>
   <button class="primary-btn"> primary</button>
   <button class="navbar-btn">navbar</button>
