--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -2,3 +2,4 @@
 <h1 class="text-3xl font-bold underline text-plpmBlueFirst bg-plpmDark">
   Hello world!
 </h1>
+<app-church-relevant></app-church-relevant>
