--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,7 +1,7 @@
+<plpm-home></plpm-home>
 
-
-=======
 <h1 class="text-3xl font-bold underline text-plpmBlueFirst bg-plpmDark">
   Hello world!
 </h1>
->>>>>>> 6aae107841d121fa2299ef8ad16113c4fbcd3e36
+
+
