--- a/src/app/home/home-hero/home-hero.component.html
+++ b/src/app/home/home-hero/home-hero.component.html
@@ -5,8 +5,11 @@
             <h1 class="comm-texts">Become a part of our community</h1>
             <button class="primary-btn">Learn more</button>
             <div class="last-text">
-                <div class="border-line"></div>
-                <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do.</p>
+                <div class="line">
+                    <img src="/assets/images/Line.png " alt="line/png">
+                </div>
+
+                <p class="last-text-1">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do.</p>
             </div>
         </div>
 
@@ -15,3 +18,4 @@
         </div>
     </div>
 </section>
+
