--- a/src/app/home/home-hero/home-hero.component.scss
+++ b/src/app/home/home-hero/home-hero.component.scss
@@ -6,8 +6,8 @@
     
     .hero-texts{
         font-family: roboto Condensed;
-        padding-left: 110px;
-        padding-top: 128px;
+        padding-left: 6.875rem;
+        padding-top: 8rem;
         color: #0D0D0D;
         
     }
@@ -20,14 +20,32 @@
         font-weight: 700;
         font-size: 4rem;
         text-transform: uppercase;
+        margin: 0rem;
         
+    }
+
+    button{
+        margin-top: 2rem;
+        margin-bottom: 4rem;
     }
     .last-text{
         display: flex;
+        gap: 0.75rem;
+       
     }
-    .border-line{
-        border: 2px solid #2F80ED;
-        transform: rotate(90deg);
+    // .border-line{
+    //     border: 2px solid #2F80ED;
+    //     transform: rotate(90deg);
         
+    // }
+    .line{
+        display: flex;
+        flex-direction: column;
+        justify-content: center;
     }
+
+   .last-text-1{
+    font-weight: 400;
+    width: 19.25rem;
+   }
 }
