--- a/src/app/styles/_buttons.scss
+++ b/src/app/styles/_buttons.scss
@@ -16,6 +16,7 @@
   background: #2f80ed;
   padding: 1.5rem 4rem;
   gap: 1rem;
+  border: 0.0625rem solid #2f80ed;
 
   &:hover {
     color: #1c1d28;
@@ -28,6 +29,7 @@
   background: #161722;
   padding: 1.5rem 4rem;
   gap: 1rem;
+  border: 0.0625rem solid #161722;
 
   &:hover {
     color: #ffffff;
@@ -40,6 +42,7 @@
   background: #27ae60;
   padding: 1.25rem 3rem;
   gap: 1rem;
+  border: 0.0625rem solid #27ae60;
 
   &:hover {
     color: #1c1d28;
