--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,5 +1,5 @@
-
 <h1 class="text-3xl font-bold underline text-plpmBlueFirst bg-plpmDark">
   Hello world!
 </h1>
-<app-church-relevant></app-church-relevant>
+<!-- <app-church-relevant></app-church-relevant>  -->
+<app-contact-us></app-contact-us>
