--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -2,6 +2,7 @@
 
 
 <plpm-nav-bar></plpm-nav-bar>
+<plpm-about></plpm-about>
 
 
 
@@ -10,7 +11,8 @@
 
 
 
-<body>
+
+<!-- <body>
 
 
   <div class="box">
@@ -24,7 +26,7 @@
   
   </div>
 
-</body>
+</body> -->
 
 
 
