--- a/src/app/styles/_buttons.scss
+++ b/src/app/styles/_buttons.scss
@@ -14,35 +14,41 @@
 .primary-btn {
   color: #1c1d28;
   background: #2f80ed;
+  background-color: #2f80ed !important;
   padding: 1.5rem 4rem;
   gap: 1rem;
 
   &:hover {
     color: #1c1d28;
     background: #2d9cdb;
+    background-color: #2f80ed !important;
   }
 }
 
 .secondary-btn {
   color: #56ccf2;
   background: #161722;
+  background-color: #161722 !important;
   padding: 1.5rem 4rem;
   gap: 1rem;
 
   &:hover {
     color: #ffffff;
     background: #161722;
+    background-color: #161722 !important;
   }
 }
 
 .navbar-btn {
   color: #1c1d28;
   background: #27ae60;
+  background-color: #27ae60 !important;
   padding: 1.25rem 3rem;
   gap: 1rem;
 
   &:hover {
     color: #1c1d28;
     background: #219653;
+    background-color: #27ae60 !important;
   }
 }
