--- a/src/app/components/footer/footer.component.html
+++ b/src/app/components/footer/footer.component.html
@@ -51,6 +51,19 @@
           <button class="subscribe-btn" matRipple>Subscribe</button>
         </form>
       </div>
+
+
+      <!-- <form>
+        <input />
+        <button>Subscribe</button>
+      </form> -->
+
+      <!-- <form class="form-wrapper cf">
+        <input type="text" placeholder="Search here..." required>
+        <button type="submit">Search</button>
+    </form> -->
+    
+
     </div>
   </div>
 </section>
