--- a/src/app/components/home/home-hero/home-hero.component.html
+++ b/src/app/components/home/home-hero/home-hero.component.html
@@ -14,7 +14,7 @@
         </div>
 
         <div class="hero-img">
-            <img src="/assets/images/cross.png" alt="cross/png">
+            <img img-fluid src="/assets/images/cross.png" alt="cross/png">
         </div>
     </div>
 </section>
