updated new features

--- a/src/app/about/about/about.component.html
+++ b/src/app/about/about/about.component.html
@@ -57,10 +57,28 @@
         <img src="./../../../assets/3MWdi5_6Hrc.svg" class="joy">
     </section>
 
+    <section class="small">
+        <div>
+            <h2>FIND FULFILLMENT AND JOY</h2>
+            <img src="./../../../assets/3MWdi5_6Hrc.svg" class="joy">
+            <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Architecto, eveniet dicta, alias magni sunt porro explicabo veniam laborum quibusdam eaque odit ut excepturi saepe expedita iusto dolores iure, aut ratione maiores id. Qui expedita pariatur totam, voluptatem ratione dolore provident.</p>
+        </div>
+       
+    </section>
+
     <section class="sixth">
         <img src="./../../../assets/3Xmcv5MjZpw.svg" class="joy">
         <div>
             <h2>SHARED VALUES</h2>
+            <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Architecto, eveniet dicta, alias magni sunt porro explicabo veniam laborum quibusdam eaque odit ut excepturi saepe expedita iusto dolores iure, aut ratione maiores id. Qui expedita pariatur totam, voluptatem ratione dolore provident.</p>
+        </div>
+        
+    </section>
+    <section class="small">
+        
+        <div>
+            <h2>SHARED VALUES</h2>
+            <img src="./../../../assets/3Xmcv5MjZpw.svg" class="joy">
             <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Architecto, eveniet dicta, alias magni sunt porro explicabo veniam laborum quibusdam eaque odit ut excepturi saepe expedita iusto dolores iure, aut ratione maiores id. Qui expedita pariatur totam, voluptatem ratione dolore provident.</p>
         </div>
         
@@ -73,10 +91,28 @@
         <img src="./../../../assets/3MWdi5_6Hrc.svg" class="joy">
     </section>
 
+    <section class="small">
+        <div>
+            <h2>CHARITY EVENTS</h2>
+            <img src="./../../../assets/3MWdi5_6Hrc.svg" class="joy">
+            <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Architecto, eveniet dicta, alias magni sunt porro explicabo veniam laborum quibusdam eaque odit ut excepturi saepe expedita iusto dolores iure, aut ratione maiores id. Qui expedita pariatur totam, voluptatem ratione dolore provident.</p>
+        </div>
+        
+    </section>
+
     <section class="sixth">
         <img src="./../../../assets/3Xmcv5MjZpw.svg" class="joy">
         <div>
             <h2>ALL ARE WELCOME</h2>
+            <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Architecto, eveniet dicta, alias magni sunt porro explicabo veniam laborum quibusdam eaque odit ut excepturi saepe expedita iusto dolores iure, aut ratione maiores id. Qui expedita pariatur totam, voluptatem ratione dolore provident.</p>
+        </div>
+        
+    </section>
+    <section class="small">
+       
+        <div>
+            <h2>ALL ARE WELCOME</h2>
+            <img src="./../../../assets/3Xmcv5MjZpw.svg" class="joy">
             <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Architecto, eveniet dicta, alias magni sunt porro explicabo veniam laborum quibusdam eaque odit ut excepturi saepe expedita iusto dolores iure, aut ratione maiores id. Qui expedita pariatur totam, voluptatem ratione dolore provident.</p>
         </div>
         
