--- a/src/app/component/nav-bar/nav-bar.component.html
+++ b/src/app/component/nav-bar/nav-bar.component.html
@@ -1,9 +1,9 @@
 
-<body class="bg-plpmDark">
+<!-- <body class="bg-plpmDark">
 
     <nav class=" flex justify-between items-center ">
         <header class="text-plpmWhite text-thin sm:text-larger font-medium">PLPM</header>
-        <ul class="text-plpmWhite text-tiny sm:text-large flex justify-between  gap-6 sm:gap-11 ">
+        <ul class=" text-plpmWhite text-tiny sm:text-large flex justify-between  gap-6 sm:gap-11 ">
             <li>HOME</li>
             <li>ABOUT US</li>
             <li>SERMON</li>
@@ -11,12 +11,74 @@
             <li>EVENT</li>
         </ul>
         <button class="bg-plpmNavButton h-2 w-6 sm:h-9 sm:w-28 text-tiny sm:text-large rounded-sm sm:rounded-xl">CONTACT US</button>
+        <button class="block md:hidden py-3 px-4 mx-2 rounded focus:outline-none hover:bg-gray-200 group"> 
+            <div class="w-5 h-1 bg-gray-600 mb-1"></div>
+            <div class="w-5 h-1 bg-gray-600 mb-1"></div>
+            <div class="w-5 h-1 bg-gray-600"></div>
+            <div class="absolute top-0 -right-full h-screen w-8/12 bg-white border opacity-0
+              group-focus:right-0 group-focus:opacity-100 transition-all duration-300">
+
+                <ul class="text-plpmWhite text-tiny sm:text-large flex justify-between  gap-6 sm:gap-11 ">
+                  <li>HOME</li>
+                  <li>ABOUT US</li>
+                  <li>SERMON</li>
+                  <li>BLOG</li>
+                  <li>EVENT</li>
+                </ul>
+              
+              
+            </div>
+          
+        </button>
         
     
     
     </nav>
 
+</body> -->
+
+<body class="bg-plpmDark ">
+
+
+    <nav class="top-0 left-0 w-full shadow">
+        <div class="container m-auto flex  justify-between text-plpmWhite">
+            <h1 class=" pl-6 md:pl-0 py-4 text-larger font-bold">PLPM</h1>
+            <ul class="hidden  md:text-large lg:text-larger font-medium  md:flex py-2 lg:py-0   cursor-pointer ">
+              <li class="hover:bg-gray-200 py-4 px-6">HOME</li>
+              <li class="hover:bg-gray-200 py-4 px-6">ABOUT US</li>
+              <li class="hover:bg-gray-200 py-4 px-6">SERMON</li>
+              <li class="hover:bg-gray-200 py-4 px-6">BLOG</li>
+              <li class="hover:bg-gray-200 py-4 px-6">EVENT</li>
+              
+              
+            </ul>
+            <button class=" hidden md:inline md:bg-plpmNavButton md:h-10 md:w-28 md:mt-2 md:text-large lg:text-larger  font-semibold md:rounded-xl   ">CONTACT US</button>
+            
+            <button class="block md:hidden py-3 pr-4  mx-2 rounded focus:outline-none hover:bg-gray-200 group"> 
+               <div class="w-5 h-1 bg-plpmWhite mb-1"></div>
+               <div class="w-5 h-1 bg-plpmWhite mb-1"></div>
+               <div class="w-5 h-1 bg-plpmWhite"></div>
+                <div class="absolute top-0 -right-full h-96 w-7/12 bg-plpmDark rounded-xl border opacity-0
+                   group-focus:right-0 group-focus:opacity-100 transition-all duration-300">
+                   <ul class="flex flex-col items-center w-full text-base cursor-pointer pt-5">
+                       <li class="hover:bg-gray-200 py-4 px-6 w-full">HOME</li>
+                       <li class="hover:bg-gray-200 py-4 px-6 w-full">ABOUT US</li>
+                       <li class="hover:bg-gray-200 py-4 px-6 w-full">SERMON</li>
+                       <li class="hover:bg-gray-200 py-4 px-6 w-full">BLOG</li>
+                       <li class="hover:bg-gray-200 py-4 px-6 w-full">EVENT</li>
+                    </ul>
+                    <button class=" bg-plpmNavButton h-10 w-28  mt-2 text-base font-semibold  text-large rounded-xl   ">CONTACT US</button>
+                </div>
+            </button>
+        </div>
+      
+    </nav>
+    
+
+
 </body>
+
+
 
 
 
