--- a/src/app/about/about/about.component.scss
+++ b/src/app/about/about/about.component.scss
@@ -17,7 +17,7 @@ h2 {
 }
 
 p {
-    font-size: 10px;
+    font-size: 15px;
 }
 
 .second {
@@ -84,18 +84,41 @@ body {
 
 }
 
+.small {
+    
+    display: none;
+    flex-direction: column;
+    
+    width: 80%;
+    margin: 0 auto;
+    gap: 20px;
+    margin-top: 80px;
+
+}
+
+.small div h2 {
+    text-align: center;
+    margin-bottom: 15px;
+}
+
+.small div p {
+   
+    margin-top: 15px;
+}
+
 
 .joy {
     width: 300px;
 }
 
-@media screen and (max-width: 992px) {
+@media screen and (max-width: 1050px) {
     .first {
         background-image: url(./../../../assets/vOeB66Yoriw.svg);
         height: 420px;
         padding-left: 14px;
         display: flex;
         flex-direction: column;
+        
         
         justify-items: center;
     }
@@ -116,6 +139,7 @@ body {
         width: 80%;
         margin: 0 auto;
         gap: 14px;
+        align-items: center;
         
         
     }
@@ -130,13 +154,13 @@ body {
     
     }
     .pray {
-        width: 250px;
+        width: 400px;
         align-items: center;
         margin-top: 30px;
     }
     
     .pray-x {
-        width: 300px;
+        width: 400px;
         margin-top: 30px;
     }
     body {
@@ -155,22 +179,44 @@ body {
         display: flex;
         flex-direction: column;
         align-items: center;
-        height: 200px;
+        height: 70px;
+        margin-top: 30px;
         justify-content: center;
         width: 80%;
-        margin: 0 auto;
+        
     }
     .sixth {
+        display: none;
+      
+    
+    }
+    .small {
+    
         display: flex;
-        justify-content: space-between;
-        width: 55%;
+        flex-direction: column;
+        
+        width: 80%;
         margin: 0 auto;
         gap: 20px;
         margin-top: 80px;
     
     }
+    
+    .small div h2 {
+        text-align: center;
+        margin-bottom: 15px;
+    }
+    
+    .small div p {
+       
+        margin-top: 15px;
+    }
     .joy {
-        width: 150px;
+        width: 450px;
+    }
+    body {
+        background-color: #e5e5e5;
+        height: 4400px;
     }
     
 
@@ -213,19 +259,38 @@ body {
         display: flex;
         flex-direction: column;
         align-items: center;
-        height: 200px;
+        height: 70px;
+        margin-top: 30px;
         justify-content: center;
         width: 80%;
-        margin: 0 auto;
+        
     }
     .sixth {
+        display: none;
+     
+    
+    }
+
+    .small {
+    
         display: flex;
-        justify-content: space-between;
+        flex-direction: column;
+        
         width: 80%;
         margin: 0 auto;
         gap: 20px;
         margin-top: 80px;
     
+    }
+    
+    .small div h2 {
+        text-align: center;
+        margin-bottom: 15px;
+    }
+    
+    .small div p {
+       
+        margin-top: 15px;
     }
   
     .pray {
@@ -246,6 +311,13 @@ body {
     h2 {
         font-size: 20px;
         font-weight: 700;
+    }
+    .joy {
+        width: 450px;
+    }
+    body {
+        background-color: #e5e5e5;
+        height: 4400px;
     }
    
   
