love-compassion-update

--- a/src/app/components/home/love-compassion/love-compassion.component.html
+++ b/src/app/components/home/love-compassion/love-compassion.component.html
@@ -13,7 +13,7 @@
   <div class="images">
     <img src="/assets/images/love-compassion-3.png" alt="love-compassion/png" />
     <div class="button-img">
-      <div class="primary-btn">Read more</div>
+      <button class="primary-btn read-more">Read more</button>
       <img
         src="/assets/images/love-compassion-2.png"
         alt="love-compassion/png"
@@ -21,15 +21,16 @@
     </div>
     <img src="/assets/images/love-compassion-1.png" alt="love-compassion/png" />
   </div>
-  <div class="primary-btn">Read more</div>
 
-  <div class="lov-compassion-text2">
+  <div class="love-compassion-text2">
     <p>OUR MISSION AND VISION</p>
-    <h2>CELEBRATE WITH US</h2>
+    <h4>CELEBRATE WITH US</h4>
     <p>
       Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod
       tempor incididunt ut labore et dolore magna aliqua.
     </p>
-    <a href="#">Read more</a>
+    <a href="#">Read more
+      <img src="/assets/images/arrow-right.png" alt="arrow/png">
+    </a>
   </div>
 </section>
