updated contact page scss

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,10 +1,11 @@
 <!-- <app-church-relevant></app-church-relevant>   -->
-<!-- <app-contact-us></app-contact-us> -->
-
-
-
-
 <plpm-nav-bar></plpm-nav-bar>
+<app-contact-us></app-contact-us>
+
+
+
+
+<!-- <plpm-nav-bar></plpm-nav-bar> -->
 <!-- <plpm-about></plpm-about> -->
 <!-- <plpm-event></plpm-event> -->
 
@@ -21,13 +22,13 @@
 
   <div class="box">
     <plpm-box *ngFor="let item of data" class="column">
-  
+
       <img src= {{item.imageUrl}}>
       <h2>{{item.textOne}}</h2>
       <p>{{item.textTwo}}</p>
-  
+
     </plpm-box>
-  
+
   </div>
 
 </body> -->
