--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,6 +1,8 @@
 <!-- <app-church-relevant></app-church-relevant>   -->
 <plpm-nav-bar></plpm-nav-bar>
-<app-contact-us></app-contact-us>
+<plpm-event-details></plpm-event-details>
+<!-- <app-contact-us></app-contact-us> -->
+
 
 
 
