--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,7 +1,9 @@
 <!-- <app-church-relevant></app-church-relevant>   -->
 <plpm-nav-bar></plpm-nav-bar>
-<plpm-event-details></plpm-event-details>
+<!-- <plpm-event-details></plpm-event-details>  -->
 <!-- <app-contact-us></app-contact-us> -->
+<plpm-sermon></plpm-sermon> 
+<!-- <plpm-sermon></plpm-sermon> -->
 
 
 
@@ -10,27 +12,3 @@
 <!-- <plpm-nav-bar></plpm-nav-bar> -->
 <!-- <plpm-about></plpm-about> -->
 <!-- <plpm-event></plpm-event> -->
-
-
-
-
-
-
-
-
-
-<!-- <body>
-
-
-  <div class="box">
-    <plpm-box *ngFor="let item of data" class="column">
-
-      <img src= {{item.imageUrl}}>
-      <h2>{{item.textOne}}</h2>
-      <p>{{item.textTwo}}</p>
-
-    </plpm-box>
-
-  </div>
-
-</body> -->
