--- a/src/app/event-details/event-details/event-details.component.html
+++ b/src/app/event-details/event-details/event-details.component.html
@@ -28,10 +28,13 @@
     </div>
 
 
-<div id="form" class="px-6 py-4 bg-plpmDarkGray">
+<div id="form" class="px-6 py-4 bg-plpmLightGray">
+      <div class=" form bg-plpmDarkGray">
         <form novalidate>
           <fieldset>
-            <legend>REGISTER NOW</legend>
+            <div class="reg_title">
+              <legend>REGISTER NOW</legend>
+            </div>
             <div class="location" *ngFor="let event of contacts">
 
                   <div class="flex-container"  *ngIf="event?.location">
@@ -48,47 +51,54 @@
                   </div>
               </div>
 
-            <div class="form-group row">
-              <label class="col-md-2 col-form-label"
-              for="firstNameId">Full Name</label>
-              <div class="col-md-8">
-                <input
-                  class="form-control"
-                  id="productNameId"
-                  type="text"
-                  placeholder="Leonard John"
-                  required
-                  minlength="3"
-                  name="productName"
-                />
-                <span class="invalid-feedback"> </span>
+              <div class="fullNames">
+                <div class="form-group row">
+                  <label class="col-md-2 col-form-label"
+                  for="firstNameId">Full Name</label>
+                  <div class="col-md-8">
+                    <input
+                      class="form-control"
+                      id="productNameId"
+                      type="text"
+                      placeholder="Leonard John"
+                      required
+                      minlength="3"
+                      name="productName"
+                    />
+                    <span class="invalid-feedback"> </span>
+                  </div>
+                </div>
               </div>
-            </div>
-
-            <div class="form-group row">
-              <label class="col-md-2 col-form-label"
-              for="firstNameId">Email</label>
-              <div class="col-md-8">
-                <input
-                  class="form-control"
-                  id="productCodeId"
-                  type="text"
-                  placeholder="admin@abc.com"
-                  required
-                  name="productCode"
-                />
-                <span class="invalid-feedback"> </span>
+              
+              <div class="email">
+                <div class="form-group row">
+                  <label class="col-md-2 col-form-label"
+                  for="firstNameId">Email</label>
+                  <div class="col-md-8">
+                    <input
+                      class="form-control"
+                      id="productCodeId"
+                      type="text"
+                      placeholder="admin@abc.com"
+                      required
+                      name="productCode"
+                    />
+                    <span class="invalid-feedback"> </span>
+                  </div>
+                </div>
               </div>
-            </div>
 
           </fieldset>
 
+          <div class="button">
           <div class="form-group row">
             <div class="col-md-1">
               <button class="primary-btn btn" type="button">REGISTER NOW</button>
           </div>
           </div>
+        </div>
         </form>
+      </div>
     </div>
 
 <!-- <div class="px-6 py-4">
