--- a/src/app/event-details/event-details/event-details.component.scss
+++ b/src/app/event-details/event-details/event-details.component.scss
@@ -1,8 +1,24 @@
 ::ng-deep .flex-container {
+  // display: flex;
+  // width: 100%;
+  // height: 48px;
+  // // right: 374px;
+  // top: 324px;
+  // font-family: 'Roboto Condensed';
+  // font-style: normal;
+  // font-weight: 400;
+  // font-size: 16px;
+  // line-height: 24px;
+  // color: #161722;
+
+  // background: #F7F8FA;
+
+  // transform: translate(-50, -40%);
+
   display: flex;
   width: 100%;
-  height: 48px;
-  right: 374px;
+  height: 100%;
+  // right: 374px;
   top: 324px;
   font-family: 'Roboto Condensed';
   font-style: normal;
@@ -11,7 +27,8 @@
   line-height: 24px;
   color: #161722;
 
-  background: #F7F8FA;
+  // background: #F7F8FA;
+  transform: translate(1%, 35%);
 }
 
 img {
@@ -24,6 +41,27 @@ img {
   right: 0;
   margin: auto;
   margin-top: 0px;
+  transform: translate(4%, 0%);
+}
+
+.form {
+   transform: translate(-2%, -4%);
+}
+
+.fullNames {
+  transform: translate(5%, -25%);
+}
+
+.email {
+  transform: translate(5%, -25%);
+}
+
+.button {
+  transform: translate(5%, -25%);
+}
+
+.reg_title {
+  transform: translate(5%, 35%);
 }
 
 .fa-search {
@@ -184,7 +222,8 @@ legend {
 
 textarea,
 input[type="text"] {
-  width: 100%;
+  // width: 100%;
+  width: 75%;
   padding: 10px 15px;
   margin: 5px 0;
   box-sizing: border-box;
@@ -219,14 +258,14 @@ input {
   color: #1C1D28;
 }
 
-::ng-deep #registration {
-  width: 522px;
-  height: 484px;
-  left: 868px;
-  top: 208px;
+// ::ng-deep #registration {
+//   width: 522px;
+//   height: 484px;
+//   left: 868px;
+//   top: 208px;
 
-  background: #F7F8FA;
-}
+//   background: #F7F8FA;
+// }
 
 ::ng-deep #upcoming_events {
   width: 104px;
