--- a/src/app/sermon/sermon/sermon.component.scss
+++ b/src/app/sermon/sermon/sermon.component.scss
@@ -2,7 +2,7 @@
   display: flex;
   width: 100%;
   height: 48px;
-  right: 374px;
+  // right: 374px;
   top: 324px;
   font-family: 'Roboto Condensed';
   font-style: normal;
@@ -12,6 +12,7 @@
   color: #161722;
 
   background: #F7F8FA;
+  transform: translate(-7%, -10%);
 }
 
 img {
