--- a/src/app/home/love-compassion/love-compassion.component.html
+++ b/src/app/home/love-compassion/love-compassion.component.html
@@ -29,8 +29,9 @@
       Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod
       tempor incididunt ut labore et dolore magna aliqua.
     </p>
-    <a href="#">Read more
-      <img src="/assets/images/arrow-right.png" alt="arrow/png">
+    <a href="#"
+      >Read more
+      <img src="/assets/images/arrow-right.png" alt="arrow/png" />
     </a>
   </div>
 </section>
