--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,14 +1,3 @@
-
-<!-- <plpm-home></plpm-home>
-<plpm-footer></plpm-footer>
-
-
-<h1 class="text-3xl font-bold underline text-plpmBlueFirst bg-plpmDark">
-  Hello world!
-</h1>
-<app-church-relevant></app-church-relevant>  
-<app-contact-us></app-contact-us>  -->
+<plpm-nav-bar></plpm-nav-bar>
 <router-outlet></router-outlet>
-
-<!-- <app-contact-us></app-contact-us>  -->
 <plpm-footer></plpm-footer>
