--- a/src/app/sermon/sermon/sermon.component.scss
+++ b/src/app/sermon/sermon/sermon.component.scss
@@ -4,14 +4,14 @@
   height: 48px;
   // right: 374px;
   top: 324px;
-  font-family: 'Roboto Condensed';
+  font-family: "Roboto Condensed";
   font-style: normal;
   font-weight: 400;
   font-size: 16px;
   line-height: 24px;
   color: #161722;
 
-  background: #F7F8FA;
+  background: #f7f8fa;
   transform: translate(-7%, -10%);
 }
 
@@ -39,7 +39,7 @@ img {
   height: 64px;
   right: 562px;
   top: 1124px;
-  font-family: 'Roboto Condensed';
+  font-family: "Roboto Condensed";
   font-style: normal;
   font-weight: 700;
   font-size: 48px;
@@ -50,55 +50,53 @@ img {
   color: #161722;
 }
 
-  ::ng-deep .box {
-    display: flex;
-    background-color: #E5E5E5;
-  }
+::ng-deep .box {
+  display: flex;
+  background-color: #e5e5e5;
+}
 
-  ::ng-deep .column {
-    flex: 50%;
-    padding: 10px;
-    height: 350px;
-    margin: 20px;
-  }
+::ng-deep .column {
+  flex: 50%;
+  padding: 10px;
+  height: 350px;
+  margin: 20px;
+}
 
-   ::ng-deep .column:nth-child(1) {
-   background: linear-gradient(to bottom, #FFFFFF 90%, #27AE60 10%)
-  }
+::ng-deep .column:nth-child(1) {
+  background: linear-gradient(to bottom, #ffffff 90%, #27ae60 10%);
+}
 
- ::ng-deep .column:nth-child(2) {
-  background: linear-gradient(to bottom, #FFFFFF 90%, #FFFFFF 10%)
- }
+::ng-deep .column:nth-child(2) {
+  background: linear-gradient(to bottom, #ffffff 90%, #ffffff 10%);
+}
 
 ::ng-deep .column:nth-child(3) {
-   background: linear-gradient(to bottom, #FFFFFF 90%, #FFFFFF 10%)
-  }
+  background: linear-gradient(to bottom, #ffffff 90%, #ffffff 10%);
+}
 
- ::ng-deep .column:nth-child(4) {
-  background: linear-gradient(to bottom, #FFFFFF 90%, #FFFFFF 10%)
- }
- 
- ::ng-deep .column:nth-child(5) {
-  background: linear-gradient(to bottom, #FFFFFF 90%, #FFFFFF 10%)
- }
+::ng-deep .column:nth-child(4) {
+  background: linear-gradient(to bottom, #ffffff 90%, #ffffff 10%);
+}
 
- ::ng-deep .column:nth-child(6) {
-  background: linear-gradient(to bottom, #FFFFFF 90%, #FFFFFF 10%)
- }
- 
- ::ng-deep .column:nth-child(7) {
-  background: linear-gradient(to bottom, #FFFFFF 90%, #FFFFFF 10%)
- }
+::ng-deep .column:nth-child(5) {
+  background: linear-gradient(to bottom, #ffffff 90%, #ffffff 10%);
+}
 
+::ng-deep .column:nth-child(6) {
+  background: linear-gradient(to bottom, #ffffff 90%, #ffffff 10%);
+}
 
+::ng-deep .column:nth-child(7) {
+  background: linear-gradient(to bottom, #ffffff 90%, #ffffff 10%);
+}
 
- ::ng-deep .box h3 {
+::ng-deep .box h3 {
   font-size: 32px;
- }
+}
 
- ::ng-deep .box p {
+::ng-deep .box p {
   font-size: 16px;
- }
+}
 
 ::ng-deep .location {
   width: 100%;
@@ -106,49 +104,34 @@ img {
   left: 868px;
   top: 208px;
 
-  background: #F7F8FA;
+  background: #f7f8fa;
 }
 
 ::ng-deep #text {
   width: 100%;
-  height: 56px;
-  right: 396px;
-  top: 780px;
-
   font-family: "Roboto Condensed";
   font-style: normal;
   font-weight: 700;
-  font-size: 24px;
+  font-size: 20px;
   line-height: 28px;
   letter-spacing: -0.01em;
   text-transform: uppercase;
-
   color: #161722;
+  overflow: hidden;
 }
 
 ::ng-deep #text1 {
-  transform: translateY(5px);
   width: 100%;
-  height: 24px;
-  right: 541px;
-  top: 868px;
-
   font-family: "Roboto Condensed";
   font-style: normal;
   font-weight: 400;
   font-size: 16px;
   line-height: 24px;
-
-  height: 72px;
-  width: 630px;
-  left: 110px;
-  top: 739px;
+  overflow: hidden;
   opacity: 78%;
 }
 
 ::ng-deep #text2 {
-  transform: translateY(2px);
-
   font-family: Roboto Condensed;
   font-size: 24px;
   font-weight: 400;
@@ -157,24 +140,18 @@ img {
   text-align: left;
 
   height: 108px;
-  width: 607.8226928710938px;
-  left: 121px;
-  top: 835px;
   opacity: 78%;
 
-  border-left: 5px solid #FFD2A4;
+  border-left: 5px solid #ffd2a4;
   height: 100px;
 }
 
 ::ng-deep #text3 {
   width: 100%;
   transform: translateY(20px);
-  width: 630px;
   height: 72px;
-  right: 749px;
-  top: 965px;
 
-  font-family: 'Roboto Condensed';
+  font-family: "Roboto Condensed";
   font-style: normal;
   font-weight: 400;
   font-size: 16px;
@@ -186,10 +163,6 @@ img {
 
 legend {
   width: 100%;
-  height: 28px;
-  right: 881px;
-  top: 691px;
-
   font-family: "Roboto Condensed";
   font-style: normal;
   font-weight: 700;
@@ -209,7 +182,7 @@ input[type="text"] {
 }
 
 input {
-  background: #F7F8FA;
+  background: #f7f8fa;
   border-bottom: 1px solid #232536;
 }
 
@@ -219,22 +192,18 @@ input {
   align-items: center;
   padding: 24px 64px;
   gap: 16px;
-
   width: 227px;
   height: 64px;
-  left: 908px;
-  top: 588px;
-
-  background: #2F80ED;
+  background: #2f80ed;
   border-radius: 12px;
-  font-family: 'Roboto Condensed';
+  font-family: "Roboto Condensed";
   font-style: normal;
   font-weight: 400;
   font-size: 16px;
   line-height: 16px;
   text-align: center;
   text-transform: uppercase;
-  color: #1C1D28;
+  color: #1c1d28;
 }
 
 ::ng-deep #registration {
@@ -243,7 +212,7 @@ input {
   left: 868px;
   top: 208px;
 
-  background: #F7F8FA;
+  background: #f7f8fa;
 }
 
 ::ng-deep #upcoming_events {
@@ -253,7 +222,7 @@ input {
   top: 574px;
 
   /* Cap 03 */
-  font-family: 'Roboto Condensed';
+  font-family: "Roboto Condensed";
   font-style: normal;
   font-weight: 700;
   font-size: 12px;
@@ -264,7 +233,7 @@ input {
   text-transform: uppercase;
 
   /* Gradient */
-  background: linear-gradient(109.61deg, #A54E2B -53.83%, #DC9853 62.61%);
+  background: linear-gradient(109.61deg, #a54e2b -53.83%, #dc9853 62.61%);
   -webkit-background-clip: text;
   -webkit-text-fill-color: transparent;
   background-clip: text;
