--- a/src/app/home/home-hero/home-hero.component.html
+++ b/src/app/home/home-hero/home-hero.component.html
@@ -1,9 +1,11 @@
 <section id="home-hero">
   <div class="hero-container">
-    <div class="hero-texts">
+    <div class="hero-texts md:pl-[6.875rem]">
       <p class="welcome">Welcome to our CHURCH</p>
       <h1 class="comm-texts">Become a part of our community</h1>
-      <button class="primary-btn">Learn more</button>
+      <div class="button-div">
+      <button class="primary-btn learn-more">Learn more</button>
+      </div>
       <div class="last-text">
         <div class="line">
           <img src="/assets/images/Line.png " alt="line/png" />
