--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -1,2 +1,6 @@
 <plpm-home-hero></plpm-home-hero>
+<app-church-relevant></app-church-relevant>
 <plpm-love-compassion></plpm-love-compassion>
+<plpm-sermonsPreview></plpm-sermonsPreview>
+<plpm-upcomingeventpreview></plpm-upcomingeventpreview>
+<plpm-servetheWorld></plpm-servetheWorld>
