--- a/src/app/home/love-compassion/love-compassion.component.html
+++ b/src/app/home/love-compassion/love-compassion.component.html
@@ -13,7 +13,7 @@
   <div class="images">
     <img src="/assets/images/love-compassion-3.png" alt="love-compassion/png" />
     <div class="button-img">
-      <button class="primary-btn read-more">Read more</button>
+      <button class="primary-btn read-morelargedevicce">Read more</button>
       <img
         src="/assets/images/love-compassion-2.png"
         alt="love-compassion/png"
@@ -21,7 +21,9 @@
     </div>
     <img src="/assets/images/love-compassion-1.png" alt="love-compassion/png" />
   </div>
-
+  <div class="buttondiv-smalldivce">
+  <button class="primary-btn read-more">Read more</button>
+</div>
   <div class="love-compassion-text2">
     <p>OUR MISSION AND VISION</p>
     <h4>CELEBRATE WITH US</h4>
