--- a/src/app/home/home-hero/home-hero.component.scss
+++ b/src/app/home/home-hero/home-hero.component.scss
@@ -2,12 +2,10 @@
   .hero-container {
     display: flex;
     justify-content: space-between;
-    flex-wrap: wrap;
   }
 
   .hero-texts {
     font-family: roboto Condensed;
-    padding-left: 6.875rem;
     padding-top: 8rem;
     color: #0d0d0d;
   }
@@ -32,11 +30,7 @@
     display: flex;
     gap: 0.75rem;
   }
-  // .border-line{
-  //     border: 2px solid #2F80ED;
-  //     transform: rotate(90deg);
 
-  // }
   .line {
     display: flex;
     flex-direction: column;
@@ -45,35 +39,46 @@
 
   .last-text-1 {
     font-weight: 400;
-    width: 19.25rem;
   }
 
   .hero-img {
     img {
       height: auto;
       width: 100%;
+      margin: 4rem 0;
     }
   }
 }
 
 @media screen and (max-width: 991.98px) {
   #home-hero {
-    .hero-texts {
-      padding-left: 2.5rem;
+    .learn-more {
+      height: 11px;
     }
   }
 }
 
 @media screen and (max-width: 767.98px) {
   #home-hero {
-    .hero-texts {
-    }
     .welcome {
       text-align: center;
     }
-
+    .button-div {
+      display: flex;
+      justify-content: center;
+    }
     .comm-texts {
-      font-size: 2.5rem;
+      font-size: 2rem;
+      text-align: center;
+      word-wrap: break-word;
+    }
+    .hero-img {
+      display: none;
+    }
+    .welcome,
+    .last-text-1 {
+      margin-bottom: 1rem;
     }
   }
 }
+ 
