--- a/src/app/shared/components/church-relevant/church-relevant.component.scss
+++ b/src/app/shared/components/church-relevant/church-relevant.component.scss
@@ -1,60 +1,42 @@
+h2 {
+  font-size: 48px;
+  line-height: 64px;
+  text-align: center;
+}
+h2,
+h4 {
+  font-weight: 700;
+  letter-spacing: -0.01em;
+}
+h6 {
+  font-size: 16px;
+  line-height: 19px;
+  text-align: center;
+}
+h4 {
+  font-size: 32px;
+  line-height: 44px;
+}
+h2,
+h6,
+h4 {
+  font-family: "Roboto Condensed";
+  font-style: normal;
 
- ::ng-deep .next {
-    background-color: red;
+  text-transform: uppercase;
+  color: #161722;
+}
+.box {
+  font-family: "Roboto Condensed";
+  color: #161722;
+}
 
-    display:flex;
-    flex-direction: row;
-  }
-
-   ::ng-deep .text {
-   color: #161722;
-  }
-
-  ::ng-deep .text2 {
-    color: #161722;
-
-   }
-
-   ::ng-deep .text3 {
-       color: #161722;
-      }
-
-  ::ng-deep .box {
-       background-color: #E5E5E5;
-     }
-
-  ::ng-deep .box {
-    display: flex;
-   }
-
-    ::ng-deep .box .column:nth-child(1) {
-    background: linear-gradient(to bottom, #56CCF2 90%, #27AE60 10%)
-   }
-
-  ::ng-deep .box .column:nth-child(2) {
-   background: linear-gradient(to bottom, rgba(67, 181, 244, 0.8) 90%, #27AE60 10%)
-  }
-
-  ::ng-deep .box .column:nth-child(3) {
-   background: linear-gradient(to bottom, #56CCF2 90%, #27AE60 10%)
-  }
-
-  ::ng-deep .column {
-   flex: 50%;
-   padding: 10px;
-   height: 300px;
-
-   margin: 20px;
-  }
-
-  ::ng-deep .box h3 {
-   font-size: 32px;
-  }
-
-  ::ng-deep .box p {
-   font-size: 16px;
-  }
-
-
-
-
+.box .column:nth-child(1) {
+  background: linear-gradient(to bottom, #56ccf2 90%, #27ae60 10%);
+}
+.box .column:nth-child(2) {
+  background: linear-gradient(to bottom, #43b5f4cc 90%, #27ae60 10%);
+}
+.box .column:nth-child(3) {
+  background: linear-gradient(to bottom, #56ccf2 90%, #27ae60 10%);
+}
