--- a/src/app/shared/components/nav-bar/nav-bar.component.html
+++ b/src/app/shared/components/nav-bar/nav-bar.component.html
@@ -52,76 +52,154 @@
         </li>
       </ul>
       <button
-        class="hidden md:inline md:bg-plpmNavButton md:h-10 md:w-28 md:mt-2 md:text-large lg:text-larger font-semibold md:rounded-xl"
+        class="hidden md:inline md:bg-plpmNavButton md:h-10 md:w-32 md:mt-2 md:text-large lg:text-larger font-semibold md:rounded-sm"
       >
         CONTACT US
       </button>
 
       <button
-        class="block md:hidden py-3 pr-4 mx-2 rounded focus:outline-none hover:bg-gray-200 group"
+        class="block md:hidden py-3 pr-4 mx-2 rounded focus:outline-none hover:bg-gray-200"
+        (click)="togglenavbarmobile()"
+        *ngIf="!hidenavbar"
       >
         <div class="w-5 h-1 bg-plpmWhite mb-1"></div>
         <div class="w-5 h-1 bg-plpmWhite mb-1"></div>
         <div class="w-5 h-1 bg-plpmWhite"></div>
-        <div
-          class="absolute top-0 -right-full h-96 w-7/12 bg-plpmDark rounded-xl border opacity-0 group-focus:right-0 group-focus:opacity-100 transition-all duration-300"
-        >
-          <ul
-            class="flex flex-col items-center w-full text-base cursor-pointer pt-5"
-          >
-            <li class="flex items-center">
-              <a
-                class="hover:bg-gray-200 py-4 px-6"
-                [routerLink]="[Routes.home]"
-                routerLinkActive="active"
-                ariaCurrentWhenActive="page"
-                >HOME</a
-              >
-            </li>
-            <li class="flex items-center">
-              <a
-                class="hover:bg-gray-200 py-4 px-6"
-                [routerLink]="[Routes.about]"
-                routerLinkActive="active"
-                ariaCurrentWhenActive="page"
-                >ABOUT US</a
-              >
-            </li>
-            <li class="flex items-center">
-              <a
-                class="hover:bg-gray-200 py-4 px-6"
-                [routerLink]="[Routes.sermon]"
-                routerLinkActive="active"
-                ariaCurrentWhenActive="page"
-                >SERMON</a
-              >
-            </li>
-            <li class="flex items-center">
-              <a
-                class="hover:bg-gray-200 py-4 px-6"
-                [routerLink]="[Routes.blog]"
-                routerLinkActive="active"
-                ariaCurrentWhenActive="page"
-                >BLOG</a
-              >
-            </li>
-            <li class="flex items-center">
-              <a
-                class="hover:bg-gray-200 py-4 px-6"
-                [routerLink]="[Routes.event]"
-                routerLinkActive="active"
-                ariaCurrentWhenActive="page"
-                >EVENT</a
-              >
-            </li>
-          </ul>
+      </button>
+      <div
+        *ngIf="hidenavbar"
+        class="absolute z-[99] top-0 right-0 w-7/12 h-screen bg-plpmDark flex flex-col items-center transition-all duration-300"
+      >
+        <div class="absolute left-6">
           <button
-            class="bg-plpmNavButton h-10 w-28 mt-2 text-base font-semibold text-large rounded-xl"
+            class="text-3xl background-none font-bold"
+            (click)="togglenavbarmobile()"
           >
-            CONTACT US
+            &times;
           </button>
         </div>
-      </button>
+        <ul
+          class="flex flex-col items-center w-full text-base cursor-pointer pt-8"
+        >
+          <li class="flex items-center">
+            <a
+              class="hover:bg-gray-200 py-4 px-6"
+              [routerLink]="[Routes.home]"
+              routerLinkActive="active"
+              ariaCurrentWhenActive="page"
+              >HOME</a
+            >
+          </li>
+          <li class="flex items-center">
+            <a
+              class="hover:bg-gray-200 py-4 px-6"
+              [routerLink]="[Routes.about]"
+              routerLinkActive="active"
+              ariaCurrentWhenActive="page"
+              >ABOUT US</a
+            >
+          </li>
+          <li class="flex items-center">
+            <a
+              class="hover:bg-gray-200 py-4 px-6"
+              [routerLink]="[Routes.sermon]"
+              routerLinkActive="active"
+              ariaCurrentWhenActive="page"
+              >SERMON</a
+            >
+          </li>
+          <li class="flex items-center">
+            <a
+              class="hover:bg-gray-200 py-4 px-6"
+              [routerLink]="[Routes.blog]"
+              routerLinkActive="active"
+              ariaCurrentWhenActive="page"
+              >BLOG</a
+            >
+          </li>
+          <li class="flex items-center">
+            <a
+              class="hover:bg-gray-200 py-4 px-6"
+              [routerLink]="[Routes.event]"
+              routerLinkActive="active"
+              ariaCurrentWhenActive="page"
+              >EVENT</a
+            >
+          </li>
+        </ul>
+        <button
+          class="bg-plpmNavButton h-10 w-28 mt-2 text-base font-semibold text-large rounded-xl"
+        >
+          CONTACT US
+        </button>
+      </div>
+      <div
+        *ngIf="hidenavbar"
+        class="absolute z-[99] top-0 right-0 w-7/12 h-screen bg-plpmDark border flex flex-col items-center transition-all duration-300"
+      >
+        <div class="absolute left-6">
+          <button
+            class="text-3xl border-0 background-none font-bold"
+            (click)="togglenavbarmobile()"
+          >
+            &times;
+          </button>
+        </div>
+        <ul
+          class="flex flex-col items-center w-full text-base cursor-pointer pt-8"
+        >
+          <li class="flex items-center">
+            <a
+              class="hover:bg-gray-200 py-4 px-6"
+              [routerLink]="[Routes.home]"
+              routerLinkActive="active"
+              ariaCurrentWhenActive="page"
+              >HOME</a
+            >
+          </li>
+          <li class="flex items-center">
+            <a
+              class="hover:bg-gray-200 py-4 px-6"
+              [routerLink]="[Routes.about]"
+              routerLinkActive="active"
+              ariaCurrentWhenActive="page"
+              >ABOUT US</a
+            >
+          </li>
+          <li class="flex items-center">
+            <a
+              class="hover:bg-gray-200 py-4 px-6"
+              [routerLink]="[Routes.sermon]"
+              routerLinkActive="active"
+              ariaCurrentWhenActive="page"
+              >SERMON</a
+            >
+          </li>
+          <li class="flex items-center">
+            <a
+              class="hover:bg-gray-200 py-4 px-6"
+              [routerLink]="[Routes.blog]"
+              routerLinkActive="active"
+              ariaCurrentWhenActive="page"
+              >BLOG</a
+            >
+          </li>
+          <li class="flex items-center">
+            <a
+              class="hover:bg-gray-200 py-4 px-6"
+              [routerLink]="[Routes.event]"
+              routerLinkActive="active"
+              ariaCurrentWhenActive="page"
+              >EVENT</a
+            >
+          </li>
+        </ul>
+        <button
+          class="bg-plpmNavButton h-10 w-32 mt-2 text-base font-semibold text-large rounded-sm"
+        >
+          CONTACT US
+        </button>
+      </div>
     </div>
   </nav>
 </body>
