--- a/src/app/event/event/event.component.html
+++ b/src/app/event/event/event.component.html
@@ -44,7 +44,7 @@
         <button
           class="md:bg-plpmDark text-plpmCard h-9 w-28 mt-6 font-semibold md:rounded-xl"
         >
-          Register
+          <a [routerLink]="'1'"> Register </a>
         </button>
       </div>
     </div>
