--- a/src/app/event/event/event.component.html
+++ b/src/app/event/event/event.component.html
@@ -11,6 +11,12 @@
     </h3>
   </section>
 
+  <markdown
+    class="variable-binding"
+    [data]="event[0].data[0].attributes.details"
+  ></markdown>
+  <!-- <p>{{ event }}</p> -->
+
   <section
     class="third flex m-auto w-11/12 mt-14 flex-col md:flex-row md:justify-between"
   >
