--- a/src/styles.scss
+++ b/src/styles.scss
@@ -5,8 +5,29 @@
 @tailwind components;
 @tailwind utilities;
 
+@import "prismjs/themes/prism-okaidia.css";
+@import "prismjs/plugins/line-numbers/prism-line-numbers.css";
+@import "prismjs/plugins/line-highlight/prism-line-highlight.css";
 
 * {
-    margin: 0;
-    padding: 0;
+  margin: 0;
+  padding: 0;
+}
+
+.variable-binding {
+  display: block;
+  width: 90%;
+  margin: 0 auto;
+
+  // ol {
+  //   list-style: decimal !important;
+  // }
+
+  // ul {
+  //   list-style: circle !important;
+  // }
+
+  .image-style-side {
+    float: right;
+  }
 }
