--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -4,3 +4,4 @@
 <plpm-sermonsPreview></plpm-sermonsPreview>
 <plpm-upcomingeventpreview></plpm-upcomingeventpreview>
 <plpm-servetheWorld></plpm-servetheWorld>
+<share_insipre_inovate></share_insipre_inovate>
