--- a/src/app/shared/components/church-relevant/church-relevant.component.scss
+++ b/src/app/shared/components/church-relevant/church-relevant.component.scss
@@ -26,17 +26,17 @@ h4 {
   text-transform: uppercase;
   color: #161722;
 }
-.box {
+.boxx {
   font-family: "Roboto Condensed";
   color: #161722;
 }
 
-.box .column:nth-child(1) {
+.boxx .columnn:nth-child(1) {
   background: linear-gradient(to bottom, #56ccf2 90%, #27ae60 10%);
 }
-.box .column:nth-child(2) {
+.boxx .columnn:nth-child(2) {
   background: linear-gradient(to bottom, #43b5f4cc 90%, #27ae60 10%);
 }
-.box .column:nth-child(3) {
+.boxx .columnn:nth-child(3) {
   background: linear-gradient(to bottom, #56ccf2 90%, #27ae60 10%);
 }
