--- a/src/app/shared/components/footer/footer.component.html
+++ b/src/app/shared/components/footer/footer.component.html
@@ -2,13 +2,16 @@
   <div class="footer">
     <div class="texts">
       <div class="liberty-text">
-        <h3>Perfect liberty power ministry</h3>
+        <img
+          class="w-[220px] mb-6"
+          src="/assets/images/perfect liberty logo 1.png"
+          alt="arrow/png"
+        />
       </div>
 
       <div class="text-2">
-        <a href="#"><span>(480) 555-0103</span></a>
-        <span>4517 Washington Ave. </span>
-        <a href="#"><span>finsweet@example.com</span></a>
+        <a href="#"><span>Road 5C Ondo State,</span></a>
+        <span>Housing Estate igba ondo Nigeria. </span>
       </div>
     </div>
 
@@ -23,18 +26,35 @@
         </div>
       </div>
 
-      <div class="connect">
-        <h3>Connect</h3>
+      <div class="connect flex flex-col">
+        <h3 class="mb-[1.25rem]">Connect</h3>
         <div class="social-links">
-          <a href="#"
+          <a
+            target="blank"
+            href="https://web.facebook.com/perfectlibertypowerministry "
             ><img src="assets/images/facebook.png" alt="facebooklogo"
           /></a>
-          <a href="#"
-            ><img src="assets/images/twitter.png" alt="twitterlogo"
-          /></a>
-          <a href="#"
-            ><img src="assets/images/linked-in.png" alt="twitterlogo"
-          /></a>
+          <a
+            target="blank"
+            href="https://www.youtube.com/channel/UC-qbPuKf5ioGpWn6i4YSPNg"
+            class="bg-[#ffd2a4] rounded-[50%] w-[19px] h-[19px] flex items-center justify-center"
+          >
+            <i
+              class="fa fa-youtube text-[#161722] text-[16px]"
+              aria-hidden="true"
+            ></i>
+          </a>
+        </div>
+
+        <div class="flex flex-col mt-4">
+          <div class="flex gap-3 items-center mb-[5px]">
+            <i class="fa fa-phone text-[#ffd2a4]" aria-hidden="true"></i>
+            <h3 class="">Hot Line</h3>
+          </div>
+          <div class="flex flex-col gap-1">
+            <span class="text-[#ffffff]">+23434860967</span>
+            <span class="text-[#ffffff]">+23434860967</span>
+          </div>
         </div>
       </div>
     </div>
@@ -51,19 +71,14 @@
           <button class="subscribe-btn" matRipple>Subscribe</button>
         </form>
       </div>
-
-
-      <!-- <form>
-        <input />
-        <button>Subscribe</button>
-      </form> -->
-
-      <!-- <form class="form-wrapper cf">
-        <input type="text" placeholder="Search here..." required>
-        <button type="submit">Search</button>
-    </form> -->
-    
-
     </div>
+  </div>
+  <div
+    class="flex justify-center gap-2 mt-8 text-white items-center copy-writter"
+  >
+    <i class="fa fa-copyright" aria-hidden="true"></i>
+    <h3 class="text-[15px]">
+      Perfect Liberty Power Ministry a.k.a Life Chaper
+    </h3>
   </div>
 </section>
