--- a/src/app/home/our-sermons-preview/sermonsPreview.component.html
+++ b/src/app/home/our-sermons-preview/sermonsPreview.component.html
@@ -1,10 +1,10 @@
-<div class="bg-[#56CCF2] w-full flex justify-center previews">
-  <div class="flex flex-col uppercase preview-heading pt-16">
+<div class="bg-[#56CCF2] w-[90%] mx-[5%] lg:mx-auto  lg:w-full flex justify-center previews">
+  <div class="flex flex-col pt-4 uppercase preview-heading">
     <label class="">Watch and listen</label>
-    <h2 class="pt-4 leading-[4rem]">our sermons</h2>
+    <h2 class="pt-2 leading-[4rem]">our sermons</h2>
   </div>
 
-  <div class="flex lg:w-[80%] mx-auto hero-preview py-16">
+  <div class="flex w-[98%] lg:w-[80%] mx-auto hero-preview py-6">
     <div class="firt-hero-preview">
       <div class="hero-placeholder">
         <h5>watch and listen to our sermons</h5>
