--- a/src/app/home/servethWorld/servetheWorld.component.html
+++ b/src/app/home/servethWorld/servetheWorld.component.html
@@ -1,12 +1,11 @@
 <div
-  class="w-[90%] mx-auto lg:w-full hero-div h-[550px] flex justify-center items-center my-10"
+  class="w-[90%] mx-auto lg:w-full hero-div h-[750px] lg:h-[500px] flex justify-center items-center my-10"
 >
-  <div
-    class="dialogg-box  w-[630px] flex items-center justify-around"
-  >
-    <div class="dialogg-box-content flex flex-col justify-start py-10">
-                <h2>we want to serve the world around us</h2>
-                <p></p>
+  <div class="dialogg-box w-[630px] flex items-center justify-around">
+    <div class="flex flex-col justify-start pb-20 pt-14 lg:pb-14 lg:pt-8 dialogg-box-content">
+      <h2>we want to serve the world around us</h2>
+      <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do.</p>
+      <button class="bg-[#219653] button rounded-[12px] py-3 lg:py-2 w-[170px] text-center mt-4" type="button">Visit</button>
     </div>
     <img
       class="w-[80px] h-[60px]"
@@ -14,5 +13,5 @@
       alt="Quote/png"
     />
   </div>
-  <div class="w-[100%] lg:w-full h-[550px] overlay-gradient"></div>
+  <div class="w-[100%] lg:w-full h-[750px] lg:h-[500px] overlay-gradient"></div>
 </div>
