--- a/src/app/shared/components/church-relevant/church-relevant.component.html
+++ b/src/app/shared/components/church-relevant/church-relevant.component.html
@@ -1,13 +1,13 @@
 <!-- SUB-HEADLINE -->
-  <h6 class="text-lg font-normal text-center py-4">
+  <h6 class="py-4 text-lg font-normal text-center">
     SUB-HEADLINE</h6>
    <!--Heading-->
    <h2 class="pb-10">
     CHURCH THAT'S RELEVANT
    </h2>
 
-<div class="box flex justify-center flex-wrap pb-14">
-  <div class="column w-[78%] md:w-[42%] mx-auto lg:w-[340px] lg:mx-3 lg:mb-0 mb-10 px-16 pb-14 lg:pb-20 pt-8 lg:pt-14 " *ngFor="let d of data">
+<div class="flex flex-wrap justify-center boxx pb-14">
+  <div class="columnn w-[78%] md:w-[42%] mx-auto md:mx-2 lg:w-[340px] lg:mx-3 lg:mb-0 mb-10 px-16 pb-14 lg:pb-20 pt-8 lg:pt-14 " *ngFor="let d of data">
     
       <img  [src]="d.icon" alt="">
       <h4 class="mt-5">{{ d.text }}</h4>
