--- a/src/app/shared/components/footer/footer.component.scss
+++ b/src/app/shared/components/footer/footer.component.scss
@@ -1,9 +1,14 @@
 #footer {
   background: #161722;
   padding-top: 4rem;
-  // height: 19.5rem;
-  padding-bottom: 4rem;
-
+  padding-bottom: 1rem;
+  .copy-writter {
+    padding-top: 30px;
+    font-family: "roboto Condensed";
+    h3 {
+      font-weight: 500;
+    }
+  }
   .footer {
     display: flex;
     font-family: "roboto Condensed";
@@ -15,17 +20,14 @@
     display: flex;
     flex-direction: column;
     padding-left: 45px;
-    // margin-right: 240px;
 
     .liberty-text {
       padding-left: 45px;
-      //   padding-right: 45px;
     }
     h3 {
       font-weight: 700;
       font-size: 1.1rem;
       line-height: 1.75rem;
-      //   text-align: center;
       text-transform: uppercase;
       margin: 0rem;
       margin-bottom: 1.688rem;
@@ -54,7 +56,6 @@
   .quicklinks-connect {
     display: flex;
     gap: 4.5rem;
-    // margin-right: 150px;
   }
 
   .quick-links {
@@ -88,8 +89,6 @@
       font-size: 1rem;
       line-height: 1.5rem;
       font-weight: 400;
-      margin: 0rem;
-      margin-bottom: 1.25rem;
     }
     .social-links {
       display: flex;
@@ -112,20 +111,10 @@
     }
 
     .subscribe-form-container {
-      //   z-index: 10;
-      //   position: absolute;
-
-      //   border: 1px solid rgba(255, 255, 255, 0.15);
-      //   border-radius: 12px;
-      //   height: 64px;
       .subscribe-form {
         display: flex;
         flex-direction: row;
-
         margin-top: 30px;
-        /* background: #161722; */
-        // border: 1px solid rgba(255, 255, 255, 0.15);
-        // border-radius: 12px;
         .subscribe-input {
           border: 1px solid rgba(255, 255, 255, 0.15);
           border-radius: 12px 0px 0px 12px;
@@ -133,22 +122,9 @@
           outline: none;
           width: 350px;
           color: #ffffff;
-          // height: 64px;
           background: #161722;
         }
         .subscribe-btn {
-          // outline: none;
-          // border: none;
-          // background-color: black;
-          // border-radius: 5px;
-          // padding: 15px 30px;
-          // color: #ffffff;
-          // font-weight: 700;
-          // margin-left: -10px;
-          // &:disabled {
-          //   cursor: not-allowed;
-          //
-
           margin-left: -10px;
           color: #1c1d28;
           background: #2f80ed;
@@ -164,153 +140,6 @@
         }
       }
     }
-
-    // form {
-    //   /* This bit sets up the horizontal layout */
-    //   display:flex;
-    //   flex-direction:row;
-
-    //   margin-top: 30px;
-    // /* background: #161722; */
-    // border: 1px solid rgba(255, 255, 255, 0.15);
-    // border-radius: 12px;
-    // }
-
-    // input {
-    //   /* Tell the input to use all the available space */
-    //   flex-grow: 2;
-    //   /* And hide the input's outline, so the form looks like the outline */
-    //   border: none;
-    // }
-
-    // input:focus {
-    //   /* removing the input focus blue box. Put this on the form if you like. */
-    //   outline: none;
-    // }
-
-    // button {
-    //   /* Just a little styling to make it pretty */
-    //   border: 1px solid blue;
-    //   background: blue;
-    //   color: white;
-    // }
-
-    // /*Clearing Floats*/
-    // .cf:before,
-    // .cf:after {
-    //   content: "";
-    //   display: table;
-    // }
-
-    // .cf:after {
-    //   clear: both;
-    // }
-
-    // .cf {
-    //   zoom: 1;
-    // }
-    // /* Form wrapper styling */
-    // .form-wrapper {
-    //   width: 450px;
-    //   padding: 15px;
-    //   margin: 150px auto 50px auto;
-    //   background: #444;
-    //   background: rgba(0, 0, 0, 0.2);
-    //   border-radius: 10px;
-    //   box-shadow: 0 1px 1px rgba(0, 0, 0, 0.4) inset,
-    //     0 1px 0 rgba(255, 255, 255, 0.2);
-    // }
-
-    // /* Form text input */
-
-    // .form-wrapper input {
-    //   width: 330px;
-    //   height: 20px;
-    //   padding: 10px 5px;
-    //   float: left;
-    //   font: bold 15px "lucida sans", "trebuchet MS", "Tahoma";
-    //   border: 0;
-    //   background: #eee;
-    //   border-radius: 3px 0 0 3px;
-    // }
-
-    // .form-wrapper input:focus {
-    //   outline: 0;
-    //   background: #fff;
-    //   box-shadow: 0 0 2px rgba(0, 0, 0, 0.8) inset;
-    // }
-
-    // .form-wrapper input::-webkit-input-placeholder {
-    //   color: #999;
-    //   font-weight: normal;
-    //   font-style: italic;
-    // }
-
-    // .form-wrapper input:-moz-placeholder {
-    //   color: #999;
-    //   font-weight: normal;
-    //   font-style: italic;
-    // }
-
-    // .form-wrapper input:-ms-input-placeholder {
-    //   color: #999;
-    //   font-weight: normal;
-    //   font-style: italic;
-    // }
-
-    // /* Form submit button */
-    // .form-wrapper button {
-    //   overflow: visible;
-    //   position: relative;
-    //   float: right;
-    //   border: 0;
-    //   padding: 0;
-    //   cursor: pointer;
-    //   height: 40px;
-    //   width: 110px;
-    //   font: bold 15px/40px "lucida sans", "trebuchet MS", "Tahoma";
-    //   color: #fff;
-    //   text-transform: uppercase;
-    //   background: #d83c3c;
-    //   border-radius: 0 3px 3px 0;
-    //   text-shadow: 0 -1px 0 rgba(0, 0, 0, 0.3);
-    // }
-
-    // .form-wrapper button:hover {
-    //   background: #e54040;
-    // }
-
-    // .form-wrapper button:active,
-    // .form-wrapper button:focus {
-    //   background: #c42f2f;
-    //   outline: 0;
-    // }
-
-    // .form-wrapper button:before {
-    //   /* left arrow */
-    //   content: "";
-    //   position: absolute;
-    //   border-width: 8px 8px 8px 0;
-    //   border-style: solid solid solid none;
-    //   border-color: transparent #d83c3c transparent;
-    //   top: 12px;
-    //   left: -6px;
-    // }
-
-    // .form-wrapper button:hover:before {
-    //   border-right-color: #e54040;
-    // }
-
-    // .form-wrapper button:focus:before,
-    // .form-wrapper button:active:before {
-    //   border-right-color: #c42f2f;
-    // }
-
-    // .form-wrapper button::-moz-focus-inner {
-    //   /* remove extra button spacing for Mozilla Firefox */
-    //   border: 0;
-    //   padding: 0;
-    // }
 
     .waiting-form-container {
       z-index: 10;
@@ -353,9 +182,6 @@
 
       .texts {
         margin-right: 0px;
-      }
-
-      .quick-links-connect {
       }
 
       .subscribe {
